--- a/reshape.ipynb
+++ b/reshape.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2297,6 +2297,699 @@
    "source": [
     "df.columns=[[\"종류\",\"변수\",\"숫자\",\"변수2\"]]\n",
     "df"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### stack, unstack\n",
+    "- stack : 컬럼럼 => 인덱스로 변경\n",
+    "- unstack : 인덱스 => 컬럼으로 변경"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th>A</th>\n",
+       "      <th>B</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>first</th>\n",
+       "      <th>second</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"2\" valign=\"top\">bar</th>\n",
+       "      <th>one</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>two</th>\n",
+       "      <td>3</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"2\" valign=\"top\">baz</th>\n",
+       "      <th>one</th>\n",
+       "      <td>5</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>two</th>\n",
+       "      <td>7</td>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "              A  B\n",
+       "first second      \n",
+       "bar   one     1  2\n",
+       "      two     3  4\n",
+       "baz   one     5  6\n",
+       "      two     7  8"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = pd.DataFrame({\n",
+    "    \"A\":[1,3,5,7],\n",
+    "    \"B\":[2,4,6,8]\n",
+    "}, index=pd.MultiIndex.from_tuples([\n",
+    "    (\"bar\",\"one\"),(\"bar\",\"two\"),(\"baz\",\"one\"),(\"baz\",\"two\")\n",
+    "],names=['first','second']))\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 컬럼 => 인덱스\n",
+    "stacked= df.stack()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th>A</th>\n",
+       "      <th>B</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>first</th>\n",
+       "      <th>second</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"2\" valign=\"top\">bar</th>\n",
+       "      <th>one</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>two</th>\n",
+       "      <td>3</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"2\" valign=\"top\">baz</th>\n",
+       "      <th>one</th>\n",
+       "      <td>5</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>two</th>\n",
+       "      <td>7</td>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "              A  B\n",
+       "first second      \n",
+       "bar   one     1  2\n",
+       "      two     3  4\n",
+       "baz   one     5  6\n",
+       "      two     7  8"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 가장 안쪽 인덱스 => 컬럼\n",
+    "stacked.unstack()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>first</th>\n",
+       "      <th>bar</th>\n",
+       "      <th>baz</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>second</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"2\" valign=\"top\">one</th>\n",
+       "      <th>A</th>\n",
+       "      <td>1</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>B</th>\n",
+       "      <td>2</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"2\" valign=\"top\">two</th>\n",
+       "      <th>A</th>\n",
+       "      <td>3</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>B</th>\n",
+       "      <td>4</td>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "first     bar  baz\n",
+       "second            \n",
+       "one    A    1    5\n",
+       "       B    2    6\n",
+       "two    A    3    7\n",
+       "       B    4    8"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 인덱스 번호를 이용해 특정 인덱스 => 컬럼\n",
+    "stacked.unstack(0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>지역</th>\n",
+       "      <th>요일</th>\n",
+       "      <th>강수량</th>\n",
+       "      <th>강수확률</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>서울</td>\n",
+       "      <td>월요일</td>\n",
+       "      <td>100</td>\n",
+       "      <td>80</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>서울</td>\n",
+       "      <td>화요일</td>\n",
+       "      <td>80</td>\n",
+       "      <td>70</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>서울</td>\n",
+       "      <td>수요일</td>\n",
+       "      <td>1000</td>\n",
+       "      <td>90</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>경기</td>\n",
+       "      <td>월요일</td>\n",
+       "      <td>2000</td>\n",
+       "      <td>10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>경기</td>\n",
+       "      <td>화요일</td>\n",
+       "      <td>2000</td>\n",
+       "      <td>20</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>부산</td>\n",
+       "      <td>수요일</td>\n",
+       "      <td>100</td>\n",
+       "      <td>30</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>서울</td>\n",
+       "      <td>목요일</td>\n",
+       "      <td>50</td>\n",
+       "      <td>50</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>서울</td>\n",
+       "      <td>금요일</td>\n",
+       "      <td>100</td>\n",
+       "      <td>90</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>부산</td>\n",
+       "      <td>화요일</td>\n",
+       "      <td>200</td>\n",
+       "      <td>20</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>경기</td>\n",
+       "      <td>수요일</td>\n",
+       "      <td>100</td>\n",
+       "      <td>80</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>경기</td>\n",
+       "      <td>목요일</td>\n",
+       "      <td>50</td>\n",
+       "      <td>50</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>경기</td>\n",
+       "      <td>금요일</td>\n",
+       "      <td>100</td>\n",
+       "      <td>10</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    지역   요일   강수량  강수확률\n",
+       "0   서울  월요일   100    80\n",
+       "1   서울  화요일    80    70\n",
+       "2   서울  수요일  1000    90\n",
+       "3   경기  월요일  2000    10\n",
+       "4   경기  화요일  2000    20\n",
+       "5   부산  수요일   100    30\n",
+       "6   서울  목요일    50    50\n",
+       "7   서울  금요일   100    90\n",
+       "8   부산  화요일   200    20\n",
+       "9   경기  수요일   100    80\n",
+       "10  경기  목요일    50    50\n",
+       "11  경기  금요일   100    10"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = pd.DataFrame(\n",
+    "    {\n",
+    "        \"지역\":[\"서울\",\"서울\",\"서울\",\"경기\",\"경기\",\"부산\",\"서울\",\"서울\",\"부산\",\"경기\",\"경기\",\"경기\"],\n",
+    "        \"요일\":[\"월요일\",\"화요일\",\"수요일\",\"월요일\",\"화요일\",\"수요일\",\"목요일\",\"금요일\",\"화요일\",\"수요일\",\"목요일\",\"금요일\"],\n",
+    "        \"강수량\":[100,80,1000,2000,2000,100,50,100,200,100,50,100],\n",
+    "        \"강수확률\":[80,70,90,10,20,30,50,90,20,80,50,10]\n",
+    "    }\n",
+    ")\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 인덱스 변경 :set_index()\n",
+    "df.set_index([\"지역\",\"요일\"],inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead tr th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead tr:last-of-type th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr>\n",
+       "      <th></th>\n",
+       "      <th colspan=\"5\" halign=\"left\">강수량</th>\n",
+       "      <th colspan=\"5\" halign=\"left\">강수확률</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>요일</th>\n",
+       "      <th>금요일</th>\n",
+       "      <th>목요일</th>\n",
+       "      <th>수요일</th>\n",
+       "      <th>월요일</th>\n",
+       "      <th>화요일</th>\n",
+       "      <th>금요일</th>\n",
+       "      <th>목요일</th>\n",
+       "      <th>수요일</th>\n",
+       "      <th>월요일</th>\n",
+       "      <th>화요일</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>지역</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>경기</th>\n",
+       "      <td>100.0</td>\n",
+       "      <td>50.0</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>2000.0</td>\n",
+       "      <td>2000.0</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>50.0</td>\n",
+       "      <td>80.0</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>20.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>부산</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>200.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>30.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>20.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>서울</th>\n",
+       "      <td>100.0</td>\n",
+       "      <td>50.0</td>\n",
+       "      <td>1000.0</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>80.0</td>\n",
+       "      <td>90.0</td>\n",
+       "      <td>50.0</td>\n",
+       "      <td>90.0</td>\n",
+       "      <td>80.0</td>\n",
+       "      <td>70.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      강수량                                강수확률                        \n",
+       "요일    금요일   목요일     수요일     월요일     화요일   금요일   목요일   수요일   월요일   화요일\n",
+       "지역                                                                   \n",
+       "경기  100.0  50.0   100.0  2000.0  2000.0  10.0  50.0  80.0  10.0  20.0\n",
+       "부산    NaN   NaN   100.0     NaN   200.0   NaN   NaN  30.0   NaN  20.0\n",
+       "서울  100.0  50.0  1000.0   100.0    80.0  90.0  50.0  90.0  80.0  70.0"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 지역 인덱스 컬럼으로 변경\n",
+    "df.unstack(0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>지역</th>\n",
+       "      <th>경기</th>\n",
+       "      <th>부산</th>\n",
+       "      <th>서울</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>요일</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"2\" valign=\"top\">금요일</th>\n",
+       "      <th>강수량</th>\n",
+       "      <td>100.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>100.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>강수확률</th>\n",
+       "      <td>10.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>90.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"2\" valign=\"top\">목요일</th>\n",
+       "      <th>강수량</th>\n",
+       "      <td>50.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>50.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>강수확률</th>\n",
+       "      <td>50.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>50.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"2\" valign=\"top\">수요일</th>\n",
+       "      <th>강수량</th>\n",
+       "      <td>100.0</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>1000.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>강수확률</th>\n",
+       "      <td>80.0</td>\n",
+       "      <td>30.0</td>\n",
+       "      <td>90.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"2\" valign=\"top\">월요일</th>\n",
+       "      <th>강수량</th>\n",
+       "      <td>2000.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>100.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>강수확률</th>\n",
+       "      <td>10.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>80.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"2\" valign=\"top\">화요일</th>\n",
+       "      <th>강수량</th>\n",
+       "      <td>2000.0</td>\n",
+       "      <td>200.0</td>\n",
+       "      <td>80.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>강수확률</th>\n",
+       "      <td>20.0</td>\n",
+       "      <td>20.0</td>\n",
+       "      <td>70.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "지역            경기     부산      서울\n",
+       "요일                             \n",
+       "금요일 강수량    100.0    NaN   100.0\n",
+       "    강수확률    10.0    NaN    90.0\n",
+       "목요일 강수량     50.0    NaN    50.0\n",
+       "    강수확률    50.0    NaN    50.0\n",
+       "수요일 강수량    100.0  100.0  1000.0\n",
+       "    강수확률    80.0   30.0    90.0\n",
+       "월요일 강수량   2000.0    NaN   100.0\n",
+       "    강수확률    10.0    NaN    80.0\n",
+       "화요일 강수량   2000.0  200.0    80.0\n",
+       "    강수확률    20.0   20.0    70.0"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.stack(0).unstack(0)"
    ]
   },
   {
